<resources>
    <string name="app_name" translatable="false">WineLog</string>

    <string name="login_text" translatable="false">Login</string>
    <string name="login_hint" translatable="true">Insert your login</string>
    <string name="passwd_text" translatable="true">Password</string>
    <string name="passwd_hint" translatable="true">Insert your password</string>
    <string name="login_button" translatable="true">Sign in</string>

    <string name="main_menu" translatable="true">Main Menu</string>
    <string name="new_wine" translatable="true">New Wine</string>
    <string name="wine_list" translatable="true">Wine List</string>
    <string name="edit_wine" translatable="true">Edit Wine</string>
    <string name="about" translatable="true">About</string>
    <string name="exit" translatable="true">Exit</string>

    <string name="wine_name" translatable="true">Wine Name</string>
    <string name="save_button" translatable="true">Save</string>
</resources>
