<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <EditText
        android:id="@+id/etLogin"
        android:layout_below="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"/>

    <TextView
        android:id="@+id/tvPasswd"
        android:layout_below="@+id/etLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwd_text"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <EditText
        android:id="@+id/etPasswd"
        android:layout_below="@+id/tvPasswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwd_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button"
        android:layout_below="@+id/etPasswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/login_button"
        android:textColor="@color/colorText"
        style="@style/Dnoda.Button"
        android:textAllCaps="false"/>

</RelativeLayout>
