<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.dnoda.winelog_app.MenuActivity">
    <include layout="@layout/main_menu_header"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btNewWine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorText"
                    android:onClick="newWine"
                    android:padding="15dp"
                    android:text="@string/new_wine"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btListWine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/wine_list"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorText"
                    android:onClick="wineList"
                    android:textAllCaps="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btEditWine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/edit_wine"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorText"
                    android:onClick="editWine"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btAbout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/about"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorText"
                    android:onClick="about"
                    android:textAllCaps="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btExit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/exit"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorText"
                    android:onClick="exit"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>